--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,5 @@ html
     = csrf_meta_tags
     link href="http://getbootstrap.com/examples/cover/cover.css" rel="stylesheet" /
   body
-    = yield
+    .container
+      = yield
