--- a/app/views/resources/index.html.slim
+++ b/app/views/resources/index.html.slim
@@ -1,18 +1,16 @@
-.row
-  .col-xs-12
-  | I want to learn:
-  form.navbar-form role="search"
-    input.form-control placeholder="Search" type="text"
-  button.btn.btn-primary
-    | Go
+=render "resources/header"
+
 .row
   .col-xs-8
-    | Best | Newest
-    p html for dummies
+    p Best | Newest
+    p
+      = link_to 'html for dummies', '#'
     p Ea munere ridens ceteros sed, agam ipsum neglegentur cu vis. Ne possim principes pertinacia nec, blandit dissentiet mea ut, et tation voluptatibus pro. Modo nominati vel te. Molestiae necessitatibus per ex, quis altera aliquip ad nec, harum dolor salutatus in vis. At ius quaeque corrumpit, legere melius eum ad, ut per atqui ocurreret laboramus. Id integre fabellas vix, no mea doming viderer liberavisse, at illum impetus usu.
-    = link_to 'html for develpers', '#'
+    p
+      = link_to 'html for develpers', '#'
     p Ea munere ridens ceteros sed, agam ipsum neglegentur cu vis. Ne possim principes pertinacia nec, blandit dissentiet mea ut, et tation voluptatibus pro. Modo nominati vel te. Molestiae necessitatibus per ex, quis altera aliquip ad nec, harum dolor salutatus in vis. At ius quaeque corrumpit, legere melius eum ad, ut per atqui ocurreret laboramus. Id integre fabellas vix, no mea doming viderer liberavisse, at illum impetus usu.
   .col-xs-4
+    p Know good resources?
     button.btn.btn-primary.btn-lg data-target="#myModal" data-toggle="modal"
       | Add resource
 
@@ -38,5 +36,3 @@
       .modal-footer
         button.btn.btn-default data-dismiss="modal" type="button"  Close
         button.btn.btn-primary type="button"  Save changes
-
-
