Change search form size

--- a/app/assets/stylesheets/landing_pages.css.scss
+++ b/app/assets/stylesheets/landing_pages.css.scss
@@ -18,13 +18,11 @@ body {
 
 .intro-message {
   padding-top: 20%;
-  padding-bottom: 20%;
-}
-
-.intro-message > h1 {
+ h1 {
   margin-bottom: 20px;
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   font-size: 5em;
+  }
 }
 
 .intro-divider {
