--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -4,8 +4,9 @@
       .col-lg-12
         .intro-message
           h1 I want to learn
-          .form-group
-            input.form-control placeholder="Search" type="text"
           hr.intro-divider
-          = button_to "Go", "#", class: "btn btn-default btn-lg"
-
+      .col-lg-6.col-md-offset-3
+        .input-group
+          input.form-control type="text"
+            span.input-group-btn
+              button.btn.btn-default type="button"  Go!
