--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -3,10 +3,13 @@
     .row
       .col-lg-12
         .intro-message
-          h1 I want to learn
+          h1 I want to learn:
           hr.intro-divider
       .col-lg-6.col-md-offset-3
-        .input-group
+        .input-group.input-group-lg
+          span.input-group-addon
+            i.glyphicon.glyphicon-search
           input.form-control type="text"
             span.input-group-btn
               button.btn.btn-default type="button"  Go!
+
