--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -5,7 +5,7 @@
         .intro-message
           h1 I want to learn:
           hr.intro-divider
-      .col-lg-6.col-md-offset-3
+      .col-sm-6.col-sm-offset-3.col-lg-6.col-md-offset-3
         .input-group.input-group-lg
           span.input-group-addon
             i.glyphicon.glyphicon-search
