--- a/app/assets/stylesheets/landing_pages.css.scss
+++ b/app/assets/stylesheets/landing_pages.css.scss
@@ -20,8 +20,9 @@ body {
   padding-top: 20%;
  h1 {
   margin-bottom: 20px;
-  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.9);
   font-size: 5em;
+  text-transform: uppercase;
   }
 }
 
