--- a/app/assets/stylesheets/resources.css.scss
+++ b/app/assets/stylesheets/resources.css.scss
@@ -30,4 +30,14 @@
   font-weight: bold;
 }
 
+.nav-pills {
+  padding-bottom: 15px;
+  padding-top: 15px;
+  a {
+    background-color: white;
+  }
+}
 
+ul.pagination {
+  margin-top: 5px;
+}
