--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -1,15 +1,18 @@
 .intro-header
+  .intro-message
+    .container
+      .row.visible-lg
+        .col-lg-12
+          h1 I want to learn
+          input(type="text" autofocus)
+      .row.hidden-lg
+        .col-md-12
+          h1 I want to learn
+        .col-md-12
+          input(type="text" autofocus)
+
   .container
     .row
       .col-lg-12
-        .intro-message
-          h1 I want to learn:
-          hr.intro-divider
-      .col-sm-6.col-sm-offset-3.col-lg-6.col-lg-offset-3
-        .input-group.input-group-lg
-          span.input-group-addon
-            i.glyphicon.glyphicon-search
-          input.form-control type="text"
-            span.input-group-btn
-              button.btn.btn-default type="button"  Go!
+        button.btn.btn-primary.btn-lg.btn-block type="button"  Go!
 
