Remove spellcheck from search bar

--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -4,13 +4,12 @@
       .row.visible-lg
         .col-lg-12
           h1 I want to learn
-          input(type="text" autofocus)
+          input (type="text" spellcheck="false" autofocus)
       .row.hidden-lg
         .col-md-12
           h1 I want to learn
         .col-md-12
-          input(type="text" autofocus)
-
+           input (type="text" spellcheck="false" autofocus)
   .container
     .row
       .col-lg-12
