--- a/app/views/resources/_header.html.slim
+++ b/app/views/resources/_header.html.slim
@@ -10,8 +10,6 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       form.navbar-form.navbar-left role="search"
         .input-group.input-group-lg
-          span.input-group-addon
-            i.glyphicon.glyphicon-search
           input.form-control type="text"
             span.input-group-btn
-              button.btn.btn-default type="button"  Go!
+              button.btn.btn-primary type="button"  Go!
