Move voting to the right side

--- a/app/assets/stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/notes.css.scss
@@ -39,3 +39,11 @@ ul.pagination {
 .navbar-brand {
   font-size: 25px;
 }
+
+.badge {
+  color: #f8f8f8;
+  background-color: #f8f8f8;
+}
+.list-group-item {
+  background-color: #f8f8f8;
+}
