--- a/app/views/notes/_header.html.slim
+++ b/app/views/notes/_header.html.slim
@@ -13,5 +13,5 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
           input.form-control type="text"
             span.input-group-btn
               button.btn.btn-primary type="button"  Go!
-      .nav.navbar-nav.navbar-right
+      .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
         button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Log in
