wells to partials

--- a/app/views/notes/_resources.html.slim
+++ b/app/views/notes/_resources.html.slim
@@ -1,11 +1,12 @@
 #resource.tab-pane
-  p lorem ipsum 2
-  .text-center
-    | Add resource:
-    p
-      input.form-control placeholder="URL" type="text"
-    p
-      input.form-control placeholder="Title" type="text"
-    p
-      button.btn.btn-primary
-        | Add
+  .well
+    .text-center
+      p
+        | Add resource:
+      p
+        input.form-control placeholder="URL" type="text"
+      p
+        input.form-control placeholder="Title" type="text"
+      p
+        button.btn.btn-primary
+          | Add
