Add description field

--- a/app/views/notes/_resources.html.slim
+++ b/app/views/notes/_resources.html.slim
@@ -1,12 +1,12 @@
 #resource.tab-pane
   .well
     .text-center
-      p
-        | Add resource:
+      h1 Add resource:
       p
         input.form-control placeholder="URL" type="text"
       p
         input.form-control placeholder="Title" type="text"
       p
-        button.btn.btn-primary
-          | Add
+        textarea.form-control placeholder="Description" rows="3"
+      p
+        button.btn.btn-primary Add
