Add autocomplete to main search bar

--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -2,16 +2,17 @@
   .intro-message
     .container
       .row.visible-lg
-        .col-lg-12
+        .col-lg-12.ui-widget
           h1 I want to learn
-          input (type="text" spellcheck="false" autofocus)
+          input#tags (type="text" spellcheck="false" autofocus)
       .row.hidden-lg
         .col-md-12
           h1 I want to learn
-        .col-md-12
-           input (type="text" spellcheck="false" autofocus)
+        .col-md-12.ui-widget
+           input#tags (type="text" spellcheck="false" autofocus)
   .container
     .row
       .col-lg-12
         button.btn.btn-primary.btn-lg.btn-block type="button"  Go!
+
 
