--- a/app/views/layouts/_modal.html.slim
+++ b/app/views/layouts/_modal.html.slim
@@ -5,10 +5,17 @@
         button.close data-dismiss="modal" type="button"
           span aria-hidden="true"  &times;
           span.sr-only Close
-        h4#myModalLabel.modal-title Modal title
+        h1#myModalLabel.modal-title.text-center Log in
       .modal-body
-        p Sign in | Sign up
-        | FB or Github
+        .container.text-center
+          .row
+            .col-sm-3
+              a.btn.btn-block.btn-social.btn-facebook
+                i.fa.fa-facebook
+                | Sign in with Facebook
+            .col-sm-3
+              a.btn.btn-block.btn-social.btn-github
+                i.fa.fa-github
+                | Sign in with Github
       .modal-footer
-        button.btn.btn-default data-dismiss="modal" type="button"  Close
 
