--- a/app/views/notes/_resources.html.slim
+++ b/app/views/notes/_resources.html.slim
@@ -9,4 +9,4 @@
       p
         textarea.form-control placeholder="Description" rows="3"
       p
-        button.btn.btn-primary data-target="#myModal" data-toggle="modal" Add
+        button.btn.btn-primary.btn-lg data-target="#myModal" data-toggle="modal" Add
