log in buttons lg

--- a/app/views/layouts/_modal.html.slim
+++ b/app/views/layouts/_modal.html.slim
@@ -9,11 +9,11 @@
       .modal-body
         .row
           .col-sm-6
-            a.btn.btn-block.btn-social.btn-facebook
+            a.btn.btn-block.btn-social.btn-facebook.btn-lg
               i.fa.fa-facebook
               | Sign in with Facebook
           .col-sm-6
-            a.btn.btn-block.btn-social.btn-github
+            a.btn.btn-block.btn-social.btn-github.btn-lg
               i.fa.fa-github
               | Sign in with Github
       .modal-footer
