--- a/app/views/landing_pages/index.html.slim
+++ b/app/views/landing_pages/index.html.slim
@@ -4,12 +4,12 @@
       .row.visible-lg
         .col-lg-12.ui-widget
           h1 I want to learn
-          input#tags (type="text" spellcheck="false" autofocus)
+          input.tags (type="text" spellcheck="false" autofocus)
       .row.hidden-lg
         .col-md-12
           h1 I want to learn
         .col-md-12.ui-widget
-           input#tags (type="text" spellcheck="false" autofocus)
+           input.tags (type="text" spellcheck="false" autofocus)
   .container
     .row
       .col-lg-12
