--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,3 +9,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+.ui-widget {
+  background: rgba(105, 105, 105, 0.9);
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.9);
+  font-size: 25px;
+  color: #fff;
+}
