Change controller name to links

--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -1,4 +1,4 @@
-=render "notes/header"
+=render "links/header"
 .main-container.container
   .row
     .col-md-12
@@ -10,6 +10,6 @@
         li.pull-right
            a data-toggle="pill" href="#resource"  Add resource
       .tab-content
-        = render "notes/newest"
-        = render "notes/popular"
-        = render "notes/resources"
+        = render "links/newest"
+        = render "links/popular"
+        = render "links/resources"
