--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -10,7 +10,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       form.navbar-form.navbar-left role="search"
         .input-group.input-group-lg
-          input.form-control type="text"
+          input.form-control.tags(type="text" spellcheck="false" autofocus)
             span.input-group-btn
               button.btn.btn-primary type="button"  Go!
       .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
