Create subject if it does not exist

--- a/app/views/links/_resources.html.slim
+++ b/app/views/links/_resources.html.slim
@@ -14,6 +14,6 @@
                   = message
         = f.input :url
         = f.input :title
-        = f.input :subject_id
+        = f.input :subject_name
         = f.input :description
         = f.button :submit
