--- a/app/assets/stylesheets/links.css.scss
+++ b/app/assets/stylesheets/links.css.scss
@@ -65,6 +65,7 @@ textarea { resize: vertical; }
 }
 
 #error_explanation {
+  text-align: left;
   margin: auto auto;
   width: 450px;
   border: 2px solid red;
