--- a/app/views/links/_resources.html.slim
+++ b/app/views/links/_resources.html.slim
@@ -1,7 +1,7 @@
 #resource.tab-pane
   .well.text-center
       h1 Add resource:
-      = bootstrap_form_for(@link, layout: :horizontal, label_col: "col-sm-4 ", control_col: "col-sm-4") do |f|
+      = bootstrap_nested_form_for( [:subject, @link], layout: :horizontal, label_col: "col-sm-4 ", control_col: "col-sm-4") do |f|
         - if @link.errors.any?
           #error_explanation
             h2
@@ -13,6 +13,5 @@
                   = message
         = f.text_field :url
         = f.text_field :title, label: "Article title"
-        = f.text_field :subject_name, label: "Article subject"
         = f.text_area :description
         = f.submit "Create resource", class: "btn-primary"
