--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -2,14 +2,17 @@
 .main-container.container
   .row
     .col-md-12
-      ul.nav.nav-pills.sorting-options
-        li.active
-          a data-toggle="pill" href="#newest"  Newest
-        li
-           a data-toggle="pill" href="#popular"  Popular
-        li.pull-right
-           a data-toggle="pill" href="#resource"  Add resource
-      .tab-content
-        = render "links/newest"
-        = render "links/popular"
-        = render "links/resources"
+      - if !true
+        = render "links/noresults"
+      - else
+        ul.nav.nav-pills.sorting-options
+          li.active
+            a data-toggle="pill" href="#newest"  Newest
+          li
+             a data-toggle="pill" href="#popular"  Popular
+          li.pull-right
+             a data-toggle="pill" href="#resource"  Add resource
+        .tab-content
+          = render "links/newest"
+          = render "links/popular"
+          = render "links/resources"
