--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-fixed-top role="navigation"
+nav.navbar.navbar-default.navbar-fixed-top role="navigation" ng-controller="AutocompleteController"
   .container
     .navbar-header
       button.navbar-toggle.collapsed data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"
@@ -8,10 +8,10 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
         span.icon-bar
       a.navbar-brand href="#"  I want to learn:
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
-      form.navbar-form.navbar-left role="search"
+      form.navbar-form.navbar-left role="form" ng-submit='submit()' action="#"
         .input-group.input-group-lg
-          input.form-control.tags(type="text" spellcheck="false" autofocus)
+          input.form-control.tags(type="text" spellcheck="false" autofocus ng-model='fieldValue' typeahead-editable='false' typeahead="subject as subject.name for subject in subjects | filter:$viewValue | limitTo:8")
             span.input-group-btn
-              button.btn.btn-primary type="button"  Go!
+               button.btn.btn-primary.btn-lg.btn-block type="button" ng-disabled="fieldValue == null" ng-click="submit()" Go!
       .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
         button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Log in
