--- a/app/views/links/_noresults.html.slim
+++ b/app/views/links/_noresults.html.slim
@@ -1,6 +1,18 @@
-.well
+.well.no-results
   p.text-center
     | No results found. Do you want to
     p
-      button.btn.btn-primary.btn-lg.center-block data-target="#myModal" data-toggle="modal"
+      button.btn.btn-primary.btn-lg.center-block.to-form
         | Add one
+
+.well.add-resource.add-form
+  .text-center
+    h1 Add resource:
+    p
+      input.form-control placeholder="URL" type="text"
+    p
+      input.form-control placeholder="Title" type="text"
+    p
+      textarea.form-control placeholder="Description" rows="3"
+    p
+      button.btn.btn-primary.btn-lg data-target="#myModal" data-toggle="modal" Add
