--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -12,6 +12,6 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation" ng-controller="Auto
         .input-group.input-group-lg
           input.form-control.tags(type="text" spellcheck="false" autofocus ng-model='fieldValue' typeahead-editable='false' typeahead="subject as subject.name for subject in subjects | filter:$viewValue | limitTo:8")
             span.input-group-btn
-               button.btn.btn-primary.btn-lg.btn-block type="button" ng-disabled="fieldValue == null" ng-click="submit()" Go!
+               button.btn.btn-primary.btn-lg.btn-block type="button" ng-disabled="fieldValue == null || fieldValue.length == 0" ng-click="submit()" Go!
       .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
         button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Log in
