Add link to no resoults button

--- a/app/views/links/_noresults.html.slim
+++ b/app/views/links/_noresults.html.slim
@@ -1,4 +1,4 @@
 .well
   p.text-center
     | No results found. Do you want to
-    = button_to "Add one", '#', class: "btn btn-primary btn-lg center-block", method: :get
+    = button_to "Add one", new_subject_link_path, class: "btn btn-primary btn-lg center-block", method: :get
