--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation" ng-controller="Auto
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="#"  I want to learn:
+      = link_to "I want to learn:", subject_links_path(@subject), class: "navbar-brand"
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       form.navbar-form.navbar-left role="form" ng-submit='submit()' action="#"
         .input-group.input-group-lg
