--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -23,9 +23,10 @@
                 li.list-group-item
                   span.badge
                     #topic.upvote
-                      a.upvote data-target="#myModal" data-toggle="modal"
-                      span.count 0
-                      a.downvote data-target="#myModal" data-toggle="modal"
+                      = link_to "+1", vote_up_subject_link_path(@subject, link)
+                      = link_to link.votes, '#'
+                      = link_to "-1", vote_down_subject_link_path(@subject, link)
+
                   p
                     = link_to link.title, link.url, target: "_blank"
                   p
