--- a/app/assets/stylesheets/links.css.scss
+++ b/app/assets/stylesheets/links.css.scss
@@ -2,6 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.votes-number {
+  font-size: 20px;
+  a {
+    color: black;
+  }
+}
+
+.link-text a {
+  color: black;
+  text-decoration: none;
+}
+
+.min-height {
+  min-height: 110px;
+}
+
 .main-container {
   padding-top: 70px;
 }
