--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -17,17 +17,15 @@
           li.pull-right
             = link_to "Add resource", new_subject_link_path(@subject)
         .tab-content
-          .tab-pane.active.min-height
+          .tab-pane.active
             - @links.each do |link|
               ul.list-group
                 li.list-group-item.min-height
                   span.badge
-                    p
-                      = link_to image_tag("upvote.png"), vote_up_subject_link_path(@subject, link)
-                    p.votes-number
-                      = link_to link.votes, '#'
-                    p
-                      = link_to image_tag("downvote.png"), vote_down_subject_link_path(@subject, link)
+                    = link_to image_tag("upvote.png"), vote_up_subject_link_path(@subject, link)
+                    .votes-number
+                      = link.votes
+                    = link_to image_tag("downvote.png"), vote_down_subject_link_path(@subject, link)
 
                   p
                     = link_to link.title, link.url, target: "_blank"
