--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -22,10 +22,10 @@
               ul.list-group
                 li.list-group-item.min-height
                   span.badge
-                    = link_to image_tag("upvote.png"), vote_subject_link_path(@subject, link, value: "up")
+                    = link_to image_tag("upvote.png"), score_subject_link_path(@subject, link, value: "up")
                     .votes-number
-                      = link.votes
-                    = link_to image_tag("downvote.png"), vote_subject_link_path(@subject, link, value: "down")
+                      = @scores
+                    = link_to image_tag("downvote.png"), score_subject_link_path(@subject, link, value: "down")
 
                   p
                     = link_to link.title, link.url, target: "_blank"
