Change github to bitbucket

--- a/app/views/layouts/_modal.html.slim
+++ b/app/views/layouts/_modal.html.slim
@@ -5,7 +5,7 @@
         button.close data-dismiss="modal" type="button"
           span aria-hidden="true"  &times;
           span.sr-only Close
-        h1#myModalLabel.modal-title Log in
+        h1#myModalLabel.modal-title You can
       .modal-body
         .row
           .col-sm-6
@@ -13,8 +13,8 @@
               i.fa.fa-facebook
               | Sign in with Facebook
           .col-sm-6
-            a.btn.btn-block.btn-social.btn-github.btn-lg
-              i.fa.fa-github
-              | Sign in with Github
+            a.btn.btn-block.btn-social.btn-bitbucket.btn-lg
+              i.fa.fa-bitbucket
+              | Sign in with Bitbucket
       .modal-footer
 
