--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
  *= require_self
  *= require landing_pages
  *= require links
+ *= require components-font-awesome/css/font-awesome
  *= require bootstrap-social
  */
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets";
