--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -14,4 +14,4 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation" ng-controller="Auto
             span.input-group-btn
                button.btn.btn-primary.btn-lg.btn-block type="button" ng-disabled="fieldValue == null || fieldValue.length == 0" ng-click="submit()" Go!
       .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
-        button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Log in
+        button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Sign in
