--- a/app/views/layouts/_modal.html.slim
+++ b/app/views/layouts/_modal.html.slim
@@ -9,7 +9,7 @@
       .modal-body
         .row
           .col-sm-6
-            = link_to "/auth/facebook", class: "btn btn-block btn-social btn-facebook btn-lg" do
+            = button_to "/auth/facebook", class: "btn btn-block btn-social btn-facebook btn-lg" do
               i.fa.fa-facebook
               | Sign in with Facebook
           .col-sm-6
