--- a/app/views/links/_header.html.slim
+++ b/app/views/links/_header.html.slim
@@ -13,8 +13,9 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation" ng-controller="Auto
           input.form-control.tags(type="text" spellcheck="false" autofocus ng-model='fieldValue' placeholder="#{@subject.name}"  typeahead-editable='false' typeahead="subject as subject.name for subject in subjects | filter:$viewValue | limitTo:8")
             span.input-group-btn
                button.btn.btn-primary.btn-lg.btn-block type="button" ng-disabled="fieldValue == null || fieldValue.length == 0" ng-click="submit()" Go!
-      - if current_user
-        = button_to "Sign out", signout_path, class: "btn btn-primary btn-lg pull-right btn-top"
-      - else
-        .nav.navbar-nav.navbar-right data-target="#myModal" data-toggle="modal"
-          button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Sign in
+      .nav.navbar-nav.navbar-right
+        - if current_user
+          = button_to "Sign out", signout_path, class: "btn btn-primary btn-lg pull-right btn-top"
+        - else
+          .span data-target="#myModal" data-toggle="modal"
+            button.btn.btn-primary.btn-lg.pull-right.btn-top type="button"  Sign in
