--- a/app/views/links/index.html.slim
+++ b/app/views/links/index.html.slim
@@ -23,11 +23,10 @@
               ul.list-group
                 li.list-group-item.min-height
                   span.badge
-                    = link_to image_tag("upvote.png"), votes_path(linking_id: linking.id, value: "up"), method: :post
+                    = link_to image_tag("upvote.png"), votes_path(linking_id: linking.id, value: "up"), method: :post, class: "ask-to-sign-in"
                     .votes-number
                       = linking.scores
-                    = link_to image_tag("downvote.png"), votes_path(linking_id: linking.id, value: "down"), method: :post
-
+                    = link_to image_tag("downvote.png"), votes_path(linking_id: linking.id, value: "down"), method: :post, class: "ask-to-sign-in"
                   p
                     = link_to link.title, link.url, target: "_blank"
                   p.link-text
