--- a/app/views/links/new.html.slim
+++ b/app/views/links/new.html.slim
@@ -21,4 +21,4 @@
           = f.text_field :url
           = f.text_field :title, label: "Article title"
           = f.text_area :description
-          = f.submit "Create resource", class: "btn-primary"
+          = f.submit "Create resource", class: "btn-primary ask-to-sign-in"
